--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Propuesta de Valor: Nestor Santos - Gerente de Flota para [NOMBRE_DE_LA_EMPRESA_DE_TRANSPORTE]</title>
+    <title>Propuesta de Valor: Nestor Santos - Gerente de Flota</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap');
 
@@ -208,7 +208,7 @@
     <header>
         <img src="https://www.dropbox.com/scl/fi/ssmwr3w27v0e50tdzicgm/ProfileV01.jpg?rlkey=6rio5ubg2k4o0kqqwux8ug2dp&dl=1" alt="Foto de Nestor Santos" class="profile-pic">
         <h1>Nestor Santos</h1>
-        <h2>Líder de Operaciones y Flotas | Especialista en Optimización y Business Intelligence</h2>
+        <h2>Especialista en Inteligencia de Negocios y Operaciones Logísticas</h2>
     </header>
 
     <div class="container">
